...
                                                  totalProduct: cbaVm.products.count,
                                                  itemIndex: idx + 1,
                                                  scrollViewProxy: value)
                                .padding(.vertical, 3)
                                .padding(.horizontal)
                                .id(idx)
                                .accessibility(identifier: "ProductSummaryView")
                        }
                    }
                }
                .padding(.top, 12)
                .background(Color(red:0.803, green:0.779, blue:0.779))
            }
            .navigationBarTitleDisplayMode(.inline)
            .navigationTitle("Commonwealth Bank Products")
            .edgesIgnoringSafeArea(.bottom)
        }
    }
}

struct CBAProductSummaryView: View {
...
